[package]
name = "hust"
version = "0.1.1"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
edition = "2018"
description = "Hue bridge client library"
license = "AGPL-3.0"
repository = "https://github.com/UgnilJoZ/hust"

[dependencies]
reqwest = {version = "0.10", features = ["blocking", "json"], default-features = false}
serde = "0.8"
serde_xml = "0.9"
serde_derive = "0.8"
serde_json = "0.8"
