[package]
name = "hust"
version = "0.2.0"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
edition = "2018"
description = "Hue bridge client library"
license = "AGPL-3.0"
repository = "https://github.com/UgnilJoZ/hust"

[dependencies]
reqwest = {version = "0.10", features = ["blocking", "json"], default-features = false}
serde = "1.0"
serde-xml-rs = "0.4"
serde_derive = "1.0"
serde_json = "1.0"
